
2005-11-28 Michal Čihař  <michal@cihar.com>
    * scripts/setup.php: Don't allow loading of configuration if there is no
      write permission on config, add links to documentation, document all
      functions.
    * libraries/auth/cookie.auth.lib.php: Display PMA_errors on login form.
    * Documentation.html: Add anchors to configuration directives.

2005-11-28 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/Theme.class.php, libraries/Theme_Manager.class.php:
      new classes for handling themes
    * libraries/select_lang.lib.php:
      - revised
      - added check for lang directory (./lang/)
      - check files for languages
      - use PMA_sendHeaderLocation()
    * libraries/common.lib.php: moved all function to top, to make this as
      early as possible available

2005-11-27 Michal Čihař  <michal@cihar.com>
    * Documentation.html, scripts/setup.php: Many new features to setup
      script.
    * pdf_schema.php: Do not use right_font_family.
    * lang/czech: Update.
    * libraries/auth/cookie.auth.lib.php: Fix undefined indexes.
    * libraries/display_select_lang.lib.php, libraries/select_lang.lib.php:
      Store HTML entities rather than relying on php functions to create them.

2005-11-24 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/grab_globals.lib.php: allow scripts to bypass importing vars
    * libraries/common.lib.php, libraries/export/sql.php,
      libraries/display_tbl.lib.php, libraries/mult_submits.inc.php, sql.php,
      tbl_replace.php, tbl_row_action.php:
      define variables only where needed, and use NULL to define them
      if some places test only for isset and not for content
    * libraries/select_lang.lib.php:
      - fixed unchecked variables as it was originaly in my mind
      - added error message if requested lang could not be set
      - set fallback to en-utf-8
      - minore fixes

2005-11-25 Marc Delisle  <lem9@users.sourceforge.net>